--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
     ports:
-      - "5432:5432"
+      - "55433:5432"
 
   web:
     build: .
     command: ./bin/rails server -b 0.0.0.0 -p 3000
+    working_dir: /rails
     volumes:
       - .:/rails
     ports:
